<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/hot_list"
            style="@style/tab_menu_item"
            android:text="@string/hot_list" />

        <RadioButton
            android:id="@+id/resource_list"
            style="@style/tab_menu_item"
            android:text="@string/resource_list" />

        <RadioButton
            android:id="@+id/rank_list"
            style="@style/tab_menu_item"
            android:text="@string/rank_list" />

        <RadioButton
            android:id="@+id/integral_list"
            style="@style/tab_menu_item"
            android:text="@string/integral_list"/>
    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rg_tab_bar" />
</RelativeLayout>
