<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        android:background="@color/white"
        android:gravity="left">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/arrow"
            android:scaleType="center"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user_data"
            android:textColor="@color/usu"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/user_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:layout_above="@+id/edit_data"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nickname_title"
                android:text="@string/nickname"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <EditText
                android:id="@+id/nickname_content"
                android:layout_toRightOf="@+id/nickname_title"
                style="@style/vertical_text_sytle"
                android:background="@null"/>
        </RelativeLayout>
        <View
            style="@style/line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/sex_title"
                android:text="@string/sex"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <RadioGroup
                android:id="@+id/sex_content"
                android:layout_toRightOf="@+id/sex_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_marginRight="20dp"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>
        </RelativeLayout>

        <View
            style="@style/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/age_title"
                android:text="@string/age"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <TextView
                android:id="@+id/age_content"
                android:layout_toRightOf="@+id/age_title"
                style="@style/vertical_text_sytle"/>
        </RelativeLayout>
        <View
            style="@style/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/birthday_title"
                android:text="@string/birthday"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <TextView
                android:id="@+id/birthday_content"
                android:layout_toRightOf="@+id/birthday_title"
                style="@style/vertical_text_sytle"/>
        </RelativeLayout>
        <View
            style="@style/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/job_title"
                android:text="@string/job"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <EditText
                android:id="@+id/job_content"
                android:layout_toRightOf="@+id/job_title"
                android:text="@string/no"
                style="@style/vertical_text_sytle"
                android:background="@null"/>
        </RelativeLayout>
        <View
            style="@style/line"/>
        <RelativeLayout
            android:id="@+id/telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/telephone_title"
                android:text="@string/telephone"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <EditText
                android:id="@+id/telephone_content"
                android:layout_toRightOf="@+id/telephone_title"
                android:text="@string/no"
                style="@style/vertical_text_sytle"
                android:background="@null"/>
        </RelativeLayout>
        <View
            style="@style/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/email_title"
                android:text="@string/email"
                android:layout_width="80dp"
                style="@style/vertical_text_sytle"/>
            <EditText
                android:id="@+id/email_content"
                android:layout_toRightOf="@+id/email_title"
                android:text="@string/no"
                style="@style/vertical_text_sytle"
                android:background="@null"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/preserve"
        android:layout_alignParentBottom="true"
        android:text="@string/preserve"
        style="@style/vertical_text_sytle"/>
</RelativeLayout>