<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/activity_menu_item"
            android:drawableTop="@drawable/tab_menu_home"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/rb_game"
            style="@style/activity_menu_item"
            android:drawableTop="@drawable/tab_menu_game1"
            android:text="@string/operate" />

        <RadioButton
            android:id="@+id/rb_dynamic"
            style="@style/activity_menu_item"
            android:drawableTop="@drawable/tab_menu_dynamic"
            android:text="@string/dynamic" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/activity_menu_item"
            android:drawableTop="@drawable/tab_menu_me"
            android:text="@string/me"/>

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_tab_bar" />
</RelativeLayout >