<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/resource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <MyClass.CustomVideoView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="400dp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_margin="10dp"
            android:text="@string/text"
            android:textSize="25dp"
            android:background="@color/white"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:background="@color/white"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/function"
        android:layout_below="@+id/resource">

    </ListView>

    <LinearLayout
        android:id="@+id/function"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/good"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/disgood"
            android:text="@string/like"/>

        <TextView
            android:id="@+id/unlike"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/unlike"
            android:text="@string/unlike"/>

        <TextView
            android:id="@+id/comment"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/comment"
            android:text="@string/comment"/>

        <TextView
            android:id="@+id/collect"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/collect"
            android:text="@string/collect"/>

        <TextView
            android:id="@+id/share"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/share"
            android:text="@string/share"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/edit_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/function">

        <EditText
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input"
            android:textSize="25sp"
            android:background="@color/white"
            android:layout_toLeftOf="@+id/send"
            android:layout_alignParentLeft="true"
            android:layout_margin="5dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/send"
            android:text="发送"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/edit"/>
    </RelativeLayout>

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="删除"
        android:layout_above="@+id/function"/>
</RelativeLayout >