<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/integral"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/integral"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/integral_source"
        android:layout_toRightOf="@+id/integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integral_source"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/integral_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integral_time"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"/>
</RelativeLayout>