<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head"
        android:background="@color/white"
        android:gravity="left">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/arrow"
            android:scaleType="center"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password_question"
            android:textColor="@color/usu"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/question_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/question_title"
                android:text="@string/password_question"
                android:layout_width="100dp"
                style="@style/vertical_text_sytle"/>
            <EditText
                android:id="@+id/question_content"
                android:layout_toRightOf="@+id/question_title"
                android:text="@string/no"
                style="@style/vertical_text_sytle"
                android:background="@null"/>
        </RelativeLayout>
        <View
            style="@style/line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/answer_title"
                android:text="@string/password_answer"
                android:layout_width="100dp"
                style="@style/vertical_text_sytle"/>
            <EditText
                android:id="@+id/answer_content"
                android:layout_toRightOf="@+id/answer_title"
                android:text="@string/no"
                style="@style/vertical_text_sytle"
                android:background="@null"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/preserve"
        android:layout_alignParentBottom="true"
        android:text="@string/preserve"
        android:textColor="@color/usu"
        android:background="@color/botton_back"
        android:textStyle="bold"
        android:padding="15dp"
        style="@style/vertical_text_sytle"/>
</RelativeLayout>